--- a/requirements.baselines.txt
+++ b/requirements.baselines.txt
@@ -2,7 +2,6 @@ absl-py==2.1.0
 ale-py==0.8.1
 AutoROM==0.6.1
 AutoROM.accept-rom-license==0.6.1
-box2d-py==2.3.5
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -11,13 +10,12 @@ contourpy==1.2.0
 cycler==0.12.1
 Farama-Notifications==0.0.4
 filelock==3.13.1
-fonttools==4.50.0
-fsspec==2024.3.0
+fonttools==4.49.0
+fsspec==2024.2.0
 grpcio==1.62.1
 gymnasium==0.29.1
 idna==3.6
-imageio==2.34.0
-importlib_resources==6.3.0
+importlib_resources==6.3.1
 Jinja2==3.1.3
 kiwisolver==1.4.5
 Markdown==3.6
@@ -28,6 +26,18 @@ mdurl==0.1.2
 mpmath==1.3.0
 networkx==3.2.1
 numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.4.99
+nvidia-nvtx-cu12==12.1.105
 opencv-python==4.9.0.80
 packaging==24.0
 pandas==2.2.1
@@ -35,11 +45,9 @@ pillow==10.2.0
 protobuf==5.26.0
 psutil==5.9.8
 pygame==2.5.2
+pyglet==1.5.28
 Pygments==2.17.2
 pyparsing==3.1.2
-PyQt5==5.15.10
-PyQt5-Qt5==5.15.12
-PyQt5-sip==12.13.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.31.0
@@ -47,7 +55,7 @@ rich==13.7.1
 Shimmy==1.3.0
 six==1.16.0
 stable-baselines3==2.2.1
-swig==4.2.1
+stable-retro==0.9.2
 sympy==1.12
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
@@ -55,6 +63,7 @@ torch==2.2.1
 torchaudio==2.2.1
 torchvision==0.17.1
 tqdm==4.66.2
+triton==2.2.0
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
